/**
 * Copyright 2018-2021 Polyaxon, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

package v1;

import "google/protobuf/struct.proto";

import "v1/polyflow/k8s_resource.proto";

// Bucket connection schema validation specification
message BucketConnection {
    // Bucket
    string bucket = 1;
}

// Host path connection schema validation specification
message HostPathConnection {
    // host path
    string hostPath = 1;

    // Mount path
    string mountPath = 2;

    // Read Only
    bool readOnly = 3;
}

// Claim connection schema validation specification
message ClaimConnection {
    // Claim name
    string volumeClaim = 1;

    // Mount path
    string mountPath = 2;

    // Read Only
    bool readOnly = 3;
}

// Host connection schema validation connection
message HostConnection {
    // Url
    string url = 1;

    // insecure
    bool insecure = 2;
}

// Git connection schema validation connection
message GitConnection {
    // Url
    string url = 1;

    // revision
    bool revision = 2;

    // Addional command flag
    repeated string flags = 3;
}

message ConnectionType {
    // Connection name
    string name = 1;

    // Optional connection description
    string description = 2;

    // Optional connection tags
    string tags = 3;

    // Connection kind
    ConnectionKind kind = 4;

    // The connection schema should be a valid ConnectionSchema
    google.protobuf.Struct schema = 5;

    // Secret resource schema
    K8sResourceSchema secret = 6;

    // ConfigMap resource schema
    K8sResourceSchema configMap = 7;
}

message ConnectionSchema {
    oneof connection {
        BucketConnection bucketConnection = 1;
        HostPathConnection hostPathConnection = 2;
        ClaimConnection claimConnection = 3;
        HostConnection hostConnection = 4;
        GitConnection gitConnection = 5;
    }
}


// Connection kinds
enum ConnectionKind {
    host_path = 0;
    volume_claim = 1;
    gcs = 2;
    s3 = 3;
    wasb = 4;
    registry = 5;
    git = 6;
    aws = 7;
    gcp = 8;
    azure = 9;
    mysql = 10;
    postgres = 11;
    oracle = 12;
    vertica = 13;
    sqlite = 14;
    mssql = 15;
    redis = 16;
    presto = 17;
    mongo = 18;
    cassandra = 19;
    ftp = 20;
    grpc = 21;
    hdfs = 22;
    http = 23;
    pig_cli = 24;
    hive_cli = 25;
    hive_metastore = 26;
    hive_server2 = 27;
    jdbc = 28;
    jenkins = 29;
    samba = 30;
    snowflake = 31;
    ssh = 32;
    cloudant = 33;
    databricks = 34;
    segment = 35;
    slack = 36;
    discord = 37;
    mattermost = 38;
    pagerduty = 39;
    hipchat = 40;
    webhook = 41;
    custom = 42;
}
