/**
 * Copyright 2018-2021 Polyaxon, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

package v1;

import "google/protobuf/struct.proto";

// K8S resource schema validation
message K8sResourceSchema {
    string name = 1;
    string mount_path = 2;
    repeated string items = 3;
    int32 default_mode = 4;
}

// K8S resource specification
message K8sResourceType {
    // Name of the resource
    string name = 1;

    // The connection schema should be a valid ConnectionSchema
    K8sResourceSchema schema = 2;

    // Option if the config resource is requested
    bool is_requested = 3;
}
